<resources>
    <string name="app_name">Donation System</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="user">Email</string>
    <string name="password">Password</string>
    <string name="name">Full name</string>
    <string name="id">National ID</string>
    <string name="phone">Phone</string>
    <string name="dob">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="ss">Social Status</string>
    <string name="salary">Salary</string>
    <string name="emp">Employee</string>
    <string name="age">Age</string>
    <string name="numOfCards">Card 1</string>
    <string name="cardNum">**** **** **** 5555</string>
    <string name="currency">SR</string>
    <string name="statement">The amount in your wallet is</string>
    <string name="balance">100.00</string>
    <string name="expDate">12/22</string>
    <string name="addWallet">Add to wallet</string>
    <string name="addCard">Add a card</string>
</resources>