<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".activity.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/sign_up_icon"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:src="@drawable/ic_sign_up"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/container"
            android:layout_margin="10dp"
            android:contentDescription="@null"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sign_up_icon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/TopCornerRadius"
            app:cardElevation="20dp"
            >

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <TextView
                   android:id="@+id/sign_up_label"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:fontFamily="@font/roboto_bold"
                   android:text="@string/sign_up"
                   android:textColor="@color/dark_blue"
                   android:textSize="36sp"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintBottom_toTopOf="@id/full_name"
                   android:layout_marginStart="20dp"/>

               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/full_name"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:layout_constraintTop_toBottomOf="@+id/sign_up_label"
                   app:startIconDrawable="@drawable/ic_person"
                   android:hint="@string/name"
                   android:layout_marginStart="20dp"
                   android:layout_marginEnd="20dp">
                   <com.google.android.material.textfield.TextInputEditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="textPersonName"
                       android:background="@color/white"/>
               </com.google.android.material.textfield.TextInputLayout>

               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/email"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:layout_constraintTop_toBottomOf="@+id/full_name"
                   app:startIconDrawable="@drawable/ic_email"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   android:hint="@string/user"
                   android:layout_marginStart="20dp"
                   android:layout_marginEnd="20dp">
                   <com.google.android.material.textfield.TextInputEditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="textEmailAddress"
                       android:background="@color/white"/>
               </com.google.android.material.textfield.TextInputLayout>

               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/id"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:layout_constraintTop_toBottomOf="@+id/email"
                   app:startIconDrawable="@drawable/ic_fingerprint"
                   android:hint="@string/id"
                   android:layout_marginStart="20dp"
                   android:layout_marginEnd="20dp">
                   <com.google.android.material.textfield.TextInputEditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="number"
                       android:maxLength="10"
                       android:background="@color/white"/>
               </com.google.android.material.textfield.TextInputLayout>

               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/password"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:layout_constraintTop_toBottomOf="@+id/id"
                   app:startIconDrawable="@drawable/ic_lock"
                   app:endIconMode="password_toggle"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   android:hint="@string/password"
                   android:layout_marginStart="20dp"
                   android:layout_marginEnd="20dp">
                   <com.google.android.material.textfield.TextInputEditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="textPassword"
                       android:background="@color/white"/>
               </com.google.android.material.textfield.TextInputLayout>

               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/phone"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:layout_constraintTop_toBottomOf="@+id/password"
                   app:startIconDrawable="@drawable/ic_phone"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   android:hint="@string/phone"
                   android:layout_marginStart="20dp"
                   app:prefixText="+966"
                   android:layout_marginEnd="20dp">
                   <com.google.android.material.textfield.TextInputEditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="number"
                       android:background="@color/white"/>
               </com.google.android.material.textfield.TextInputLayout>

               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/dob_parent"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:layout_constraintTop_toBottomOf="@+id/phone"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   android:hint="@string/dob"
                   android:layout_marginStart="20dp"
                   android:layout_marginEnd="20dp">
                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/dob"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:background="@color/white"
                       android:ellipsize="start"
                       android:clickable="false"
                       android:cursorVisible="false"
                       android:focusable="false"
                       android:focusableInTouchMode="false"/>
               </com.google.android.material.textfield.TextInputLayout>

               <Button
                   android:id="@+id/sign_up_button"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:backgroundTint="@color/blue"
                   android:fontFamily="@font/roboto_bold"
                   android:text="@string/sign_up"
                   android:textAllCaps="false"
                   android:textColor="@color/white"
                   app:layout_constraintTop_toBottomOf="@id/dob_parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginStart="20dp"
                   android:layout_marginEnd="20dp"
                   android:textSize="16sp"
                   />

               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@id/sign_up_button">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/roboto_bold"
                       android:text="Already have account?" />

                   <Button
                       android:id="@+id/sign_in_button"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:background="@android:color/transparent"
                       android:fontFamily="@font/roboto_bold"
                       android:text="@string/sign_in"
                       android:textAllCaps="false"
                       android:textColor="@color/blue" />

               </LinearLayout>

           </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>