<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:orientation="vertical"
    android:clipToPadding="false">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@drawable/top_rounded_rec_gradiant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/top_rounded_rec_gradiant">

                <TextView
                    android:id="@+id/id"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/id_rec"
                    android:gravity="center"
                    android:text="ID: 1111111111"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="share"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10dp"
                    android:backgroundTint="#33FFFFFF"
                    android:textColor="@color/blue"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/text_holder"
                android:layout_width="wrap_content"
                android:layout_height="240dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/banner"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ss"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salary"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emp"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/text_values"
                android:layout_width="wrap_content"
                android:layout_height="240dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/text_holder"
                app:layout_constraintTop_toBottomOf="@id/banner"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Widower"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1500.00 SAR"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="40 Years"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_weight="1"/>

            </LinearLayout>

            <View
                android:id="@+id/vr"
                android:layout_width="1dp"
                android:layout_height="240dp"
                app:layout_constraintTop_toBottomOf="@id/banner"
                app:layout_constraintStart_toEndOf="@id/text_values"
                android:layout_marginStart="50dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/stat_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/vr"
                app:layout_constraintTop_toBottomOf="@id/banner"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_views"
                    android:layout_marginBottom="20dp"/>

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_donate"
                    app:tint="@color/blue"
                    android:layout_marginBottom="20dp"/>

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_donations"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/stat_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/stat_icon"
                app:layout_constraintTop_toBottomOf="@id/banner"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="40dp"
                android:layout_marginStart="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Visitor"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="109"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="14sp"
                    android:textColor="@color/blue"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Visitor"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="109"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="14sp"
                    android:textColor="@color/blue"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Visitor"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="109"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="14sp"
                    android:textColor="@color/blue"
                    android:layout_marginBottom="20dp"/>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>